--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,12 @@ on:
   push:
     branches: [main]  
   workflow_dispatch:
+  workflow_run:
+    workflows: ["Daily Gemini Blog Post"]
+    types:
+      - completed
 
+      
 permissions:
   contents: read
   pages: write
